feat: add theme

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/expletus-sans": "^5.0.2",
+    "@fontsource/pt-sans": "^5.0.1",
     "framer-motion": "^10.12.12",
+    "google-fonts-loader": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
