--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-fonts-loader": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
