--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/expletus-sans": "^5.0.2",
+    "@fontsource/poppins": "^5.0.1",
     "@fontsource/pt-sans": "^5.0.1",
     "framer-motion": "^10.12.12",
     "google-fonts-loader": "^1.0.2",
