--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource-variable/expletus-sans": "^5.0.2",
     "@fontsource/poppins": "^5.0.1",
     "@fontsource/pt-sans": "^5.0.1",
+    "formik": "^2.4.1",
     "framer-motion": "^10.12.12",
     "google-fonts-loader": "^1.0.2",
     "react": "^18.2.0",
