--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@fontsource-variable/expletus-sans": "^5.0.2",
     "@fontsource/poppins": "^5.0.1",
     "@fontsource/pt-sans": "^5.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "formik": "^2.4.1",
     "framer-motion": "^10.12.12",
     "google-fonts-loader": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
