--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.4.1",
     "framer-motion": "^10.12.12",
     "google-fonts-loader": "^1.0.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
